# disk_analyzer

./: README.md  pyproject.toml
src/disk_analyzer/: __init__.py  app.py  delete_service.py  main_window.py  models.py  scanner.py  tree_model.py  tree_refresh.py  treemap_layout.py  treemap_widget.py  units.py
tests/: test_delete_service.py  test_scanner.py  test_tree_refresh.py  test_treemap_layout.py
