[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "disk-capacity-analyzer"
version = "0.1.0"
description = "A PySide6 desktop app for analyzing and visualizing disk usage with a treemap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "Send2Trash>=1.8.3",
  "squarify>=0.4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
disk-analyzer = "disk_analyzer.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/disk_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"
